@@ -13,6 +13,7 @@ Core and Builtins
 Library
 -------
 
+- Issue 8860: Fixed rounding in timedelta constructor.
 
 What's New in Python 3.4.0 Alpha 1?
 ===================================
